# hermes-webui

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts  websocket.ts
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/shared/: ConnectionBadge.tsx  CostBadge.tsx  SearchBar.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: Config.tsx  Cron.tsx  Dashboard.tsx  SessionDetail.tsx  Sessions.tsx  Skills.tsx
frontend/src/utils/: cronHuman.ts  sourceColors.ts
tests/: conftest.py  test_auth.py  test_config_router.py  test_cron_router.py  test_gateway_router.py  test_health.py  test_hermes_bridge.py  test_sessions_router.py
webui/: __init__.py  __main__.py  auth.py  config.py  hermes_bridge.py  server.py
webui/routers/: config_editor.py  cron.py  gateway_status.py  health.py  search.py  sessions.py  skills.py
webui/schemas/: config.py  cron.py  gateway.py  session.py
webui/websocket/: events.py  hook_bridge.py  hub.py
